--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.idea
 
 # C extensions
 *.so
@@ -131,9 +132,6 @@ dmypy.json
 
 # MacOS
 .DS_Store
-
-# Log files
-*.log
 
 # Cache files
 *.cache
